@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.animebrasil" 
        name="Anime Brasil"
-       version="3.0.2" 
+       version="3.0.3" 
        provider-name="AddonBrasil/Leinad4Mind">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
